Update references from Suwon to Seoul

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       <iframe src="https://www.youtube.com/embed/E6Z8VTHDNRg" allowfullscreen></iframe>
     </div>
 
-    <img src="/seoul/img/toss_2.jpg" alt="toss_2">
     <img src="/seoul/img/toss_3.gif" alt="toss_3">
     <img src="/seoul/img/toss_4.gif" alt="toss_4">
     <img src="/seoul/img/toss_5.png" alt="toss_5">
@@ -64,14 +63,13 @@
     <img src="/seoul/img/toss_11.gif" alt="toss_11">
     <img src="/seoul/img/toss_12.png" alt="toss_12">
     <img src="/seoul/img/toss_13_seoul.png" alt="toss_13_seoul">
-    <img style="margin-bottom:50px;" src="/seoul/img/toss_2.jpg" alt="toss_2">
   </div>
 
   <!-- 하단 중앙: 지원하기 버튼 -->
   <div class="floating-apply">
     <a href="https://toss.im/career/job-detail?gh_jid=6670207003"
        target="_blank" rel="noopener noreferrer" id="applyBtn_seoul">
-      수원 직영 1지점 입사지원서 작성 →
+      서울 직영 1지점 입사지원서 작성 →
     </a>
   </div>
   
@@ -94,7 +92,7 @@
       applyseoul.addEventListener('click', () => {
         gtag('event', 'button_click', {
           button_id: 'applyBtn_seoul',
-          button_text: '수원 입사지원 버튼',
+          button_text: '서울 입사지원 버튼',
           location: window.location.pathname,
           transport_type: 'beacon'
         });
@@ -105,7 +103,7 @@
       kakaoseoul.addEventListener('click', () => {
         gtag('event', 'button_click', {
           button_id: 'kakaoBtn_seoul',
-          button_text: '수원 카카오톡 문의 버튼',
+          button_text: '서울 카카오톡 문의 버튼',
           location: window.location.pathname,
           transport_type: 'beacon'
         });
