--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <!-- 하단 중앙: 지원하기 버튼 -->
   <div class="floating-apply">
-    <a href="https://toss.im/career/job-detail?gh_jid=6670207003"
+    <a href="https://toss.im/career/job-detail?job_id=6327174003 "
        target="_blank" rel="noopener noreferrer" id="applyBtn_seoul">
       서울 직영 1지점 입사지원서 작성 →
     </a>
